import org.springframework.boot.gradle.plugin.SpringBootPlugin

plugins {
	id 'org.springframework.boot' apply false
	id 'io.spring.javaformat' apply false
	id 'com.google.protobuf' apply false
	id 'com.google.cloud.tools.jib' apply false
}

apply from: 'build-jenie.gradle'

description = "Jenie, Java Genie!"

configure(allprojects) { Project project ->
	apply plugin: 'java'
	apply plugin: 'idea'
	apply plugin: 'maven-publish'
	apply plugin: 'io.spring.javaformat'
	apply plugin: 'checkstyle'

	group = 'org.jenie'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(25)
		}
	}

	tasks.withType(JavaCompile).configureEach {
		options.release = 25
		options.compilerArgs += ['-Xlint:unchecked', '-Xlint:deprecation']
	}

	idea {
		module {
			downloadSources = true
			downloadJavadoc = true
		}
	}

	dependencies {
		checkstyle("io.spring.javaformat:spring-javaformat-checkstyle:${springJavaFormatVersion}")
	}

	repositories {
		mavenCentral()
		maven { url 'https://repo.spring.io/milestone' }
		maven {
			url = uri("${repoUrl}")
			credentials {
				username = project.findProperty("gpr.user")?.toString() ?: System.getenv("GITHUB_ACTOR")
				password = project.findProperty("gpr.key")?.toString() ?: System.getenv("GITHUB_TOKEN")
			}
		}
	}
}

configure(libProjs) {
	apply plugin: 'java-library'
	publishing {
		publications {
			register("gpr", MavenPublication) {
				from(components.findByName("java") as SoftwareComponent)
			}
		}
		repositories {
			maven {
				name = "GitHubPackages"
				url = "${repoUrl}"
				credentials {
					username = project.findProperty("gpr.user")?.toString() ?: System.getenv("GITHUB_ACTOR") ?: ''
					password = project.findProperty("gpr.key")?.toString() ?: System.getenv("GITHUB_TOKEN") ?: ''
				}
			}
		}
	}
}

configure(bootProjs) {
	apply plugin: 'org.springframework.boot'

	configurations.all {
		resolutionStrategy {
			force "com.google.protobuf:protobuf-java:${protobufVersion}"
		}
	}

	dependencies {
		implementation platform(SpringBootPlugin.BOM_COORDINATES)
		implementation platform("com.google.protobuf:protobuf-bom:${protobufVersion}")
	}

	bootRun {
		jvmArgs '--enable-native-access=ALL-UNNAMED'
	}
}

configure(svcProjs) {
	dependencies {
		// test
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
	}
}

configure(testProjs) {
	test {
		useJUnitPlatform()
	}
}

apply from: 'build-jib.gradle'
apply from: 'build-protobuf.gradle'
apply from: 'build-jacoco.gradle'
